# MedlinForge

./: .gitignore  CLAUDE.md  README.md  bronzeforge_testability_refactor_brief.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: manager-release.yml  publish-update-manifests.yml
BUG_REPORTS/: bronze_forge_verified_bug_report.md
docs/: addon_release_contract.md  bronzeforge_manager_prd.md  distribution.md  github_updater_prd.md  release_handoff_checklist.md  ux-audit-report.md  ux-changes-summary.md
products/: catalog.json
scripts/: build-update-manifests.mjs  build-update-manifests.test.mjs  doctor-windows.mjs  tag-addon-release.mjs  tauri-runner.mjs  windows-build-env.mjs
src/: App.test.tsx  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  manifest.rs  models.rs  service.rs  update_provider.rs
src/features/launcher/domain/: launcherLogic.test.ts  launcherLogic.ts
src/lib/: api.ts  format.test.ts  format.ts
src/lib/api/: demoLauncherGateway.test.ts  demoLauncherGateway.ts  index.ts  launcherGateway.ts  tauriLauncherGateway.ts
src/test/fakes/: fakeLauncherGateway.ts
