[package]
name = "bronzeforge-manager"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tempfile = "3"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
